--- a/Web/Views/_ViewImports.cshtml
+++ b/Web/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@using TestIdentity
-@using TestIdentity.Models
-@using TestIdentity.Models.AccountViewModels
-@using TestIdentity.Models.ManageViewModels
+@using JSONCapital.Web
+@using JSONCapital.Web.Models
+@using JSONCapital.Web.Models.AccountViewModels
+@using JSONCapital.Web.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
