--- a/Web/Views/Manage/_ManageNav.cshtml
+++ b/Web/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@using TestIdentity.Views.Manage
+﻿@using JSONCapital.Web.Views.Manage
+@using JSONCapital.Data.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
